2025-09-14T12:44:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17711341323 # 1222
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-14
* notice: last 14d: unq all: 14 33
* notice: prev accum: outdated-unq outdated-all / unq all: 1194 5865 / 1209 5900
* notice: next accum: outdated-unq outdated-all / unq all: 1195 5867 / 1209 5900
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-08-31] / []

2025-09-14T02:01:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17704937017 # 1221
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-14
* notice: last 14d: unq all: 15 35
* notice: prev accum: outdated-unq outdated-all / unq all: 1193 5861 / 1208 5896
* notice: next accum: outdated-unq outdated-all / unq all: 1194 5865 / 1209 5900
* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +2 +5 -0 -0 / 2 5
* notice: removed / changed dates: [2025-08-30] / [2025-09-13]

2025-09-13T12:44:49Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17696701971 # 1220
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-13
* notice: last 14d: unq all: 14 35
* notice: prev accum: outdated-unq outdated-all / unq all: 1193 5861 / 1207 5895
* notice: next accum: outdated-unq outdated-all / unq all: 1193 5861 / 1208 5896
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-09-13]

2025-09-13T01:47:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17690031215 # 1219