@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-09-14T12:44:12Z",
+  "timestamp" : "2025-09-15T12:53:18Z",
   "count_outdated" : 5867,
   "uniques_outdated" : 1195,
-  "count" : 5900,
-  "uniques" : 1209,
+  "count" : 5901,
+  "uniques" : 1210,
   "views" : [
     {
       "timestamp": "2025-09-02T00:00:00Z",
@@ -85,6 +85,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-09-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
