@@ -1,6 +1,6 @@
 {
-  "count": 33,
-  "uniques": 14,
+  "count": 34,
+  "uniques": 15,
   "views": [
     {
       "timestamp": "2025-09-02T00:00:00Z",
@@ -46,6 +46,11 @@
       "timestamp": "2025-09-13T00:00:00Z",
       "count": 5,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-09-15T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
