@@ -1,3 +1,12 @@
+2025-09-15T12:53:18Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17733720131 # 1224
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-15
+* notice: last 14d: unq all: 15 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 1195 5867 / 1209 5900
+* notice: next accum: outdated-unq outdated-all / unq all: 1195 5867 / 1210 5901
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-09-15]
+
 2025-09-14T12:44:12Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17711341323 # 1222
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-14
